--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-form":"^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
